Created backbone for exchange request
